2017-02-14
----------

- VirtualBox launches are now headless.  You can use the VirtualBox Manager to open the console UI if needed.
- Debian on VirtualBox is supported via Vagrant Cloud images
- Note that Debian on kvm is currently not supported because vmbuilder fails in the grub install stage
- git submodule support - any submodules are cloned and checked out
- Note that lxc-execute in Ubuntu 17.10 has a showstopper bug in stdin handling

2015-12-12
----------

Since OpenSSH removed support for DSS, Gitian now uses RSA keys instead. Base images should be regenerated.

2015-05-16
----------

LXC support has been revamped:

* debootstrap is now used directly, so that no kernel or grub packages are installed
* an attempt has been made to eliminate cases where an update of a package can fail because the container is missing a real init/upstart process

2015-03-23
----------

Now ensuring that `apt-get dist-upgrade` occurs at least once before package manifest
is computed.  This is because distributions usually don't store old versions of packages
in the repos, so we can't download the exact package version we have installed if it's
out of date.

gbuild now has a --upgrade flag that forces an upgrade after the first one.

Other Notes
===========

Important:

We are planning on switching from using lxc-start to using lxc-execute.  lxc-execute requires lxc-init (or init.lxc) to be available on the guest at one of the expected places.  You might have to manually install lxc on your base VM image or recreate the image.

To enable this now (required for Ubuntu 14.04), do:

  export LXC_EXECUTE=lxc-execute

If your guest is more recent than the host, all bets are off, since lxc-execute may not be able to find the lxc init.