@@ -10,4 +10,15 @@ if [ -z "$LXC_BRIDGE" ]; then
     LXC_BRIDGE=br0
 fi
 
-sed "s;ROOTFS;$wd/target-$LXC_SUITE-$LXC_ARCH;;s;ARCH;$LXC_ARCH;g;;s;GUESTIP;$LXC_GUEST_IP;g;s;GUESTLINK;$LXC_BRIDGE;g" < etc/lxc.config.in > var/lxc.config
+OLD_IFS=$IFS
+IFS=.
+VERSION=($(lxc-start --version))
+IFS=$OLD_IFS
+
+if [ $VERSION -ge 3 ]; then
+    LXC_CONFIG=etc/lxc.3.config.in
+else
+    LXC_CONFIG=etc/lxc.config.in
+fi
+
+sed "s;ROOTFS;$wd/target-$LXC_SUITE-$LXC_ARCH;;s;ARCH;$LXC_ARCH;g;;s;GUESTIP;$LXC_GUEST_IP;g;s;GUESTLINK;$LXC_BRIDGE;g" < $LXC_CONFIG > var/lxc.config
