@@ -24,7 +24,7 @@ echo '127.0.1.1 gitian' >> /etc/hosts
 # If LXC
 if grep /lxc/gitian /proc/1/cgroup > /dev/null || grep container=lxc /proc/1/environ > /dev/null; then
   adduser --disabled-password --gecos ${DISTRIB_NAME,,} --quiet ${DISTRIB_NAME,,} || true
-  apt-get remove -y rsyslog || true
+  apt-get purge -y rsyslog || true
   dpkg-divert --local --rename --add /sbin/initctl
   ln -sf /bin/true /sbin/initctl
   dpkg-divert --local --rename --add /usr/bin/ischroot
