@@ -1,3 +1,13 @@
+2019-05-23
+----------
+
+- Add `--skip-fetch` argument that skips fetching the latest remote source
+
+2019-05-13
+----------
+
+- No longer fetch repository from remote when the directory already exists
+
 2017-02-14
 ----------
 
